# syslog-parser

./: .gitignore  Cargo.toml  README.MD
src/: main.rs  parser.rs
