[package]
name = "syslog-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.30"}
csv = "1.2.2"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.9.5"
serde = {version= "1.0.188", features=["derive"]}
simple_logger = "4.2.0"
